# PowerHub_One

./: .gitignore  README.md  app.py  init.py  onp.html  pyproject.toml  requirements.txt
router/: router.py
setting/: __init__.py  config.py
static/css/: sb-admin-2.css  sb-admin-2.min.css
static/js/: sb-admin-2.js
templates/: criar_usuario.html  error.html  home.html  layout.html  listar_relatorios.html  login.html  register.html  usuarios.html  v_editar_usuario.html  v_grupos.html  v_vincular_grupo.html  v_vincular_usr_grupo.html  visualizar_relatorio.html
templates/config/: v_configuracoes.html
templates/embeded/: embeded.html
templates/grupos/: editar-grupo.html  v_grupos.html  v_vincular_usr_grupo.html
templates/headers/: index.html
templates/premium/: v_checkout.html
templates/relatorio/: listar_relatorios.html  visualizar_relatorio.html
templates/usuario/: criar_usuario.html  usuarios.html  v_editar_usuario.html
views/: profile.py
